--- a/assets/css/revolution/rev-style.css
+++ b/assets/css/revolution/rev-style.css
@@ -6,6 +6,8 @@
   padding: 0px 30px;
 }
 .tp-banner-container {
+  position: relative;
+  right: 0;
   width: 100%; /* Adjust as necessary */
   padding: 0;
   margin: 0;
