--- a/assets/css/revolution/rev-style.css
+++ b/assets/css/revolution/rev-style.css
@@ -9,6 +9,7 @@
   position: relative;
   right: 0;
   width: 100%; /* Adjust as necessary */
+  height: 800px;
   padding: 0;
   margin: 0;
   overflow: hidden;
