--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1319,6 +1319,11 @@ body.home-dark {
 .home-dark .section-head {
   width: 100%;
   display: inline-block;
+  padding: 20px;
+}
+
+.home-dark .section-head h3 {
+  padding-bottom: 20px;
 }
 .home-dark .section-head h2 {
   color: #fff;
