--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -191,7 +191,30 @@ hr {
 }
 /*  - End of Section Head
 =========================================================*/
+.select-options-service li {
+  margin: 0;
+  padding: 8px 0;
+  text-indent: 15px;
+  border-top: 1px solid #ffffff;
+  background-color: white;
+  color: gray;
+  -webkit-transition: all 0.15s ease-in;
+  transition: all 0.15s ease-in;
+}
 
+.select-style-service {
+  color: gray !important;
+  background-color: white !important;
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  padding: 7px 15px;
+  border: 1px solid #618bed;
+  -webkit-transition: all 0.2s ease-in;
+  transition: all 0.2s ease-in;
+}
 /*  - Page Head
 =========================================================*/
 .page-head .section-padding {
