--- a/assets/css/revolution/rev-style.css
+++ b/assets/css/revolution/rev-style.css
@@ -28,10 +28,10 @@
   font-family: "Oswald", sans-serif !important;
 }
 .tp-banner img {
+  position: absolute;
+  right: 0;
   min-width: 100%;
   height: auto;
-  margin-left: auto; /* This pushes the image to the right */
-  margin-right: 0;
 }
 .tp-banner h2 span {
   color: #fafafa;
