--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1155,6 +1155,7 @@ ul.root a {
   font-size: 18px;
   padding: 15px 45px;
   text-transform: uppercase;
+  width: 100%;
 }
 /*  - End Of Contact Section
 ============================================================================*/
